force-app/main/default/objects/Pre_Opportunity__c/Pre_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Object to hold the Free Copies e.g.type == IC pushed from Klopotek.</description>
    <label>Pre Opportunity</label>
    <nameField>
        <label>Pre Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>