force-app/main/default/objects/Pre_Opportunity__c/fields/aantal_mappen__c.field-meta.xml
<CustomField>
    <fullName>aantal_mappen__c</fullName>
    <description>Plantyn BAO NL: # mappen</description>
    <inlineHelpText>over hoeveel mappen gaat het?</inlineHelpText>
    <label>aantal mappen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 map</fullName>
            </value>
            <value>
                <fullName>2 mappen</fullName>
            </value>
            <value>
                <fullName>3 mappen</fullName>
            </value>
            <value>
                <fullName>4 mappen</fullName>
            </value>
            <value>
                <fullName>5 mappen</fullName>
            </value>
            <value>
                <fullName>6 mappen</fullName>
            </value>
            <value>
                <fullName>7 mappen</fullName>
            </value>
            <value>
                <fullName>8 mappen</fullName>
            </value>
            <value>
                <fullName>9 mappen</fullName>
            </value>
            <value>
                <fullName>10 mappen</fullName>
            </value>
            <value>
                <fullName>11 mappen</fullName>
            </value>
            <value>
                <fullName>12 mappen</fullName>
            </value>
            <value>
                <fullName>13 mappen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>