force-app/main/default/objects/Pre_Opportunity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Free_Copies</relationshipName>
    <type>Lookup</type>
</CustomField>