force-app/main/default/objects/Pre_Opportunity__c/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <formula>Account__r.ShippingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>