force-app/main/default/objects/Pre_Opportunity__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <formula>Account__r.ShippingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>