force-app/main/default/objects/Pre_Opportunity__c/fields/Account_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Street__c</fullName>
    <formula>Account__r.ShippingStreet</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>