force-app/main/default/objects/Pre_Opportunity__c/fields/Account_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Zip_Postal_Code__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>