force-app/main/default/objects/Pre_Opportunity__c/fields/Address_Klopotek_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_Klopotek_ID__c</fullName>
    <label>Address Klopotek ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>