force-app/main/default/objects/Pre_Opportunity__c/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <description>Date that the Pre-Opportunity is closed</description>
    <label>Close date</label>
    <type>Date</type>
</CustomField>