force-app/main/default/objects/Pre_Opportunity__c/fields/Competitor_Current_PU__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Current_PU__c</fullName>
    <description>Current Publisher</description>
    <label>Competitor Current PU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Averbode</fullName>
            </value>
            <value>
                <fullName>Broekx</fullName>
            </value>
            <value>
                <fullName>Die Keure</fullName>
            </value>
            <value>
                <fullName>Informat</fullName>
            </value>
            <value>
                <fullName>Pelckmans</fullName>
            </value>
            <value>
                <fullName>Plantyn</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Van In</fullName>
            </value>
            <value>
                <fullName>Wisa</fullName>
            </value>
            <value>
                <fullName>Zwijsen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>