force-app/main/default/objects/Pre_Opportunity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relation to Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Inspection_Copies</relationshipName>
    <type>Lookup</type>
</CustomField>