force-app/main/default/objects/Pre_Opportunity__c/fields/CONTACT_IFEXISTSINSERT__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_IFEXISTSINSERT__c</fullName>
    <description>used for preopps imported for private persons to relate to contacts if exixsts.</description>
    <label>CONTACT_IFEXISTSINSERT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>