force-app/main/default/objects/Pre_Opportunity__c/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <description>The date the pre-opportunity was converted to an opportunity. This is set by the Bop automaat.</description>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>