force-app/main/default/objects/Pre_Opportunity__c/fields/DccnFirstName__c.field-meta.xml
<CustomField>
    <fullName>DccnFirstName__c</fullName>
    <label>DCCN First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>