force-app/main/default/objects/Pre_Opportunity__c/fields/DccnName__c.field-meta.xml
<CustomField>
    <fullName>DccnName__c</fullName>
    <label>DCCN Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>