force-app/main/default/objects/Pre_Opportunity__c/fields/DccnPrefix__c.field-meta.xml
<CustomField>
    <fullName>DccnPrefix__c</fullName>
    <label>DCCN Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>