force-app/main/default/objects/Pre_Opportunity__c/fields/DcnFirstName__c.field-meta.xml
<CustomField>
    <fullName>DcnFirstName__c</fullName>
    <label>DCN First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>