force-app/main/default/objects/Pre_Opportunity__c/fields/DcnName__c.field-meta.xml
<CustomField>
    <fullName>DcnName__c</fullName>
    <label>DCN Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>