force-app/main/default/objects/Pre_Opportunity__c/fields/DcnPrefix__c.field-meta.xml
<CustomField>
    <fullName>DcnPrefix__c</fullName>
    <label>DCN Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>