force-app/main/default/objects/Pre_Opportunity__c/fields/DeliveryCustomer__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCustomer__c</fullName>
    <label>Delivery Customer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>