force-app/main/default/objects/Pre_Opportunity__c/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <label>EAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>