force-app/main/default/objects/Pre_Opportunity__c/fields/Educational_Program_Method__c.field-meta.xml
<CustomField>
    <fullName>Educational_Program_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Method</description>
    <label>Educational Program / Brand</label>
    <referenceTo>Method__c</referenceTo>
    <relationshipLabel>Pre Opportunities</relationshipLabel>
    <relationshipName>Pre_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>