force-app/main/default/objects/Pre_Opportunity__c/fields/ExtID__c.field-meta.xml
<CustomField>
    <fullName>ExtID__c</fullName>
    <description>used by import of the preopps related to a private customer.</description>
    <externalId>true</externalId>
    <label>ExtID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>