force-app/main/default/objects/Pre_Opportunity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Pre Opportunities</relationshipLabel>
    <relationshipName>Pre_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>