force-app/main/default/objects/Pre_Opportunity__c/fields/Lead_SO__c.field-meta.xml
<CustomField>
    <fullName>Lead_SO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Plantyn SO NL: Is there a change for next season?</description>
    <inlineHelpText>Aangevinkt als men is ingeschreven voor een sessie én aangeeft te willen veranderen van methode</inlineHelpText>
    <label>Lead?</label>
    <type>Checkbox</type>
</CustomField>