force-app/main/default/objects/Pre_Opportunity__c/fields/Lead_source__c.field-meta.xml
<CustomField>
    <fullName>Lead_source__c</fullName>
    <label>Lead source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bex</fullName>
            </value>
            <value>
                <fullName>Booklist (lead)</fullName>
            </value>
            <value>
                <fullName>Delay last season</fullName>
            </value>
            <value>
                <fullName>Demo Informat</fullName>
            </value>
            <value>
                <fullName>Event (beurs)</fullName>
            </value>
            <value>
                <fullName>lead last season</fullName>
            </value>
            <value>
                <fullName>Marketing action</fullName>
            </value>
            <value>
                <fullName>Representative action</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>