force-app/main/default/objects/Pre_Opportunity__c/fields/Marketing_nbr__c.field-meta.xml
<CustomField>
    <fullName>Marketing_nbr__c</fullName>
    <label>Marketing_nbr</label>
    <length>60</length>
    <type>Text</type>
</CustomField>