force-app/main/default/objects/Pre_Opportunity__c/fields/Method_vak__c.field-meta.xml
<CustomField>
    <fullName>Method_vak__c</fullName>
    <label>Brand Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>