force-app/main/default/objects/Pre_Opportunity__c/fields/OcnFirstName__c.field-meta.xml
<CustomField>
    <fullName>OcnFirstName__c</fullName>
    <label>OCN First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>