force-app/main/default/objects/Pre_Opportunity__c/fields/OcnName__c.field-meta.xml
<CustomField>
    <fullName>OcnName__c</fullName>
    <label>OCN Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>