force-app/main/default/objects/Pre_Opportunity__c/fields/OcnPrefix__c.field-meta.xml
<CustomField>
    <fullName>OcnPrefix__c</fullName>
    <label>OCN Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>