force-app/main/default/objects/Pre_Opportunity__c/fields/OldAccountId__c.field-meta.xml
<CustomField>
    <fullName>OldAccountId__c</fullName>
    <description>Account ID used for matching</description>
    <label>OldAccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>