force-app/main/default/objects/Pre_Opportunity__c/fields/OldContactId__c.field-meta.xml
<CustomField>
    <fullName>OldContactId__c</fullName>
    <description>Contact ID used for matching</description>
    <label>OldContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>