force-app/main/default/objects/Pre_Opportunity__c/fields/OldEducationalProgramMethodId__c.field-meta.xml
<CustomField>
    <fullName>OldEducationalProgramMethodId__c</fullName>
    <description>EducationalProgramMethod ID used for matching</description>
    <label>OldEducationalProgramMethodId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>