force-app/main/default/objects/Pre_Opportunity__c/fields/OldOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OldOpportunityId__c</fullName>
    <description>Opportunity ID used for matching</description>
    <label>OldOpportunityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>