force-app/main/default/objects/Pre_Opportunity__c/fields/OldProductId__c.field-meta.xml
<CustomField>
    <fullName>OldProductId__c</fullName>
    <description>Product ID used for matching</description>
    <label>OldProductId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>