force-app/main/default/objects/Pre_Opportunity__c/fields/OldSurveyId__c.field-meta.xml
<CustomField>
    <fullName>OldSurveyId__c</fullName>
    <description>Survey ID used for matching</description>
    <label>OldSurveyId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>