force-app/main/default/objects/Pre_Opportunity__c/fields/Open_date__c.field-meta.xml
<CustomField>
    <fullName>Open_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When the pre-opportunity is opened</description>
    <label>Open date</label>
    <type>Date</type>
</CustomField>