force-app/main/default/objects/Pre_Opportunity__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pre Opportunities</relationshipLabel>
    <relationshipName>Pre_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>