force-app/main/default/objects/Pre_Opportunity__c/fields/Opportunity_Account_Match__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_Match__c</fullName>
    <formula>IF(
 Account__c  =  Opportunity__r.AccountId ,
 TRUE,
 FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Account Match</label>
    <type>Checkbox</type>
</CustomField>