force-app/main/default/objects/Pre_Opportunity__c/fields/Order_Mark__c.field-meta.xml
<CustomField>
    <fullName>Order_Mark__c</fullName>
    <label>Order Mark</label>
    <length>30</length>
    <type>Text</type>
</CustomField>