force-app/main/default/objects/Pre_Opportunity__c/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <description>Consists of Klopotek order number and line number of the order position separated by &apos;-&apos;</description>
    <label>Order Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>