force-app/main/default/objects/Pre_Opportunity__c/fields/Ordering_Date__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Date__c</fullName>
    <description>Ordering Date</description>
    <label>Ordering Date</label>
    <type>Date</type>
</CustomField>