force-app/main/default/objects/Pre_Opportunity__c/fields/Orderline_Status__c.field-meta.xml
<CustomField>
    <fullName>Orderline_Status__c</fullName>
    <label>Orderline Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>