force-app/main/default/objects/Pre_Opportunity__c/fields/OrganizationCode__c.field-meta.xml
<CustomField>
    <fullName>OrganizationCode__c</fullName>
    <label>Organization Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>