force-app/main/default/objects/Pre_Opportunity__c/fields/PA_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>PA_Customer_Number__c</fullName>
    <description>Used for relating Person Account to preopp when implemented.</description>
    <label>PA_Customer_Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>