force-app/main/default/objects/Pre_Opportunity__c/fields/Parentaccount__c.field-meta.xml
<CustomField>
    <fullName>Parentaccount__c</fullName>
    <formula>Account__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent account</label>
    <type>Text</type>
</CustomField>