force-app/main/default/objects/Pre_Opportunity__c/fields/PositionId__c.field-meta.xml
<CustomField>
    <fullName>PositionId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>PositionId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>