force-app/main/default/objects/Pre_Opportunity__c/fields/Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Date__c</fullName>
    <description>Processing Date</description>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>