force-app/main/default/objects/Pre_Opportunity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Free_Copies</relationshipName>
    <type>Lookup</type>
</CustomField>