force-app/main/default/objects/Pre_Opportunity__c/fields/Quantity_Returned__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Returned__c</fullName>
    <label>Quantity Returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>