force-app/main/default/objects/Pre_Opportunity__c/fields/Reason_Closed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Closed__c</fullName>
    <description>Reasons for closing a lead</description>
    <inlineHelpText>Please give up a reason</inlineHelpText>
    <label>Reason Closed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Chosen Other Method</fullName>
            </value>
            <value>
                <fullName>Lead for next sales season</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
                <default>true</default>
                <label>Not applicable</label>
            </value>
            <value>
                <fullName>Wrong Data Information</fullName>
            </value>
            <value>
                <fullName>Wrong Change Information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>