force-app/main/default/objects/Pre_Opportunity__c/fields/RefPositionId__c.field-meta.xml
<CustomField>
    <fullName>RefPositionId__c</fullName>
    <label>Ref PositionId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>