force-app/main/default/objects/Pre_Opportunity__c/fields/Relevant_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Open_Opportunities__c</fullName>
    <label>#Relevant Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>