force-app/main/default/objects/Pre_Opportunity__c/fields/SchoolTeacher__c.field-meta.xml
<CustomField>
    <fullName>SchoolTeacher__c</fullName>
    <label>School or Teacher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>