force-app/main/default/objects/Pre_Opportunity__c/fields/sessie__c.field-meta.xml
<CustomField>
    <fullName>sessie__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Plantyn SO NL: to be checked when there is a subsciption for an event</description>
    <inlineHelpText>Aangevinkt als er al iemand van de school naar de sessies komt.</inlineHelpText>
    <label>Sessie?</label>
    <type>Checkbox</type>
</CustomField>