force-app/main/default/objects/Pre_Opportunity__c/fields/Stage_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Opportunity__c</fullName>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <label>Stage of Opportunity</label>
    <type>Text</type>
</CustomField>