force-app/main/default/objects/Pre_Opportunity__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Survey connected to this pre-opportunity thru the questionaire filled during the order process</description>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Pre Opportunities</relationshipLabel>
    <relationshipName>Pre_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>