force-app/main/default/objects/Pre_Opportunity__c/fields/SurveyWebID__c.field-meta.xml
<CustomField>
    <fullName>SurveyWebID__c</fullName>
    <description>will be filled with orderNumber???</description>
    <externalId>true</externalId>
    <label>SurveyWebID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>