force-app/main/default/objects/Pre_Opportunity__c/fields/TeacherNumber__c.field-meta.xml
<CustomField>
    <fullName>TeacherNumber__c</fullName>
    <label>Teacher Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>