force-app/main/default/objects/Pre_Opportunity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type Free Copy</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>BOP</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>PBGK</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>PGGK</fullName>
            </value>
            <value>
                <fullName>ABOP</fullName>
            </value>
            <value>
                <fullName>TP</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>Unknown ordertype!!!</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>ZS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>