force-app/main/default/objects/Pre_Opportunity__c/fields/Voorbeeldhoofdstuk__c.field-meta.xml
<CustomField>
    <fullName>Voorbeeldhoofdstuk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only for Plantyn SO NL to indicate if someone asked an example</description>
    <inlineHelpText>Aangevinkt als er iemand op school een voorbeeldhoofdstuk heeft gevraagd.</inlineHelpText>
    <label>Voorbeeldhoofdstuk?</label>
    <type>Checkbox</type>
</CustomField>