force-app/main/default/objects/Pre_Opportunity__c/fields/Year_1__c.field-meta.xml
<CustomField>
    <fullName>Year_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 1</label>
    <type>Checkbox</type>
</CustomField>