force-app/main/default/objects/Pre_Opportunity__c/fields/Year_2__c.field-meta.xml
<CustomField>
    <fullName>Year_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 2</label>
    <type>Checkbox</type>
</CustomField>