force-app/main/default/objects/Pre_Opportunity__c/fields/Year_3__c.field-meta.xml
<CustomField>
    <fullName>Year_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 3</label>
    <type>Checkbox</type>
</CustomField>