force-app/main/default/objects/Pre_Opportunity__c/listViews/Noordhoff_Professional_PCSS_Team_Queue_Pre_Opportunity.listView-meta.xml
<ListView>
    <fullName>Noordhoff_Professional_PCSS_Team_Queue_Pre_Opportunity</fullName>
    <filterScope>Queue</filterScope>
    <label>Noordhoff Professional PCSS Team Queue</label>
    <queue>Noordhoff_Professional_PCSS_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>